[package]
name = "rbx_dom_wasm"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rbx_binary = { version = "1.0", default-features = false }
rbx_xml = { version = "1.0", default-features = false }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_compat = { package = "getrandom", version = "0.2", features = ["js"] }
