[package]
name = "rbx2xml"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rbx_binary = "2.0"
rbx_xml = "2.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_compat = { package = "getrandom", version = "0.2", features = ["js"] }
